[tool.poetry]
name = "a16-da"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "a16_da"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
watchdog = "^4.0.0"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
